@@ -573,6 +573,9 @@ Release 0.19.1 - Unreleased
     HADOOP-4821. Usage description in the Quotas guide documentations are
     incorrect. (Boris Shkolnik via hairong)
 
+    HADOOP-4847. Moves the loading of OutputCommitter to the Task.
+    (Amareshwari Sriramadasu via ddas)
+
 Release 0.19.0 - 2008-11-18
 
   INCOMPATIBLE CHANGES
